[tool.poetry]
name = "auth0-firebase-token-exchange"
version = "1.0.0"
description = ""
authors = ["30ème Ciel <admin@30emeciel.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
dotmap = "^1.3.22"
firebase-admin = "^4.4.0"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
