[tool.poetry]
name = "auth0-firebase-token-exchange"
version = "1.0.0"
description = ""
authors = ["30ème Ciel <admin@30emeciel.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
dotmap = "^1.3.22"
firebase-admin = "^4.4.0"
flask = "^1.1.2"
# force version to so wheel (binary format) is also available on Windows with PY3.9
grpcio = "1.34.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
